# cascade_energy_losses

./: .gitignore  CMakeLists.txt  README.md  X_bias.mac  Z_bias.mac  beam_Xline.mac  beam_Zline.mac  cascades.cc  center_angles.mac  example2.cc  run1.mac  run2.mac  run3.mac  vis.mac
include/: .CascadesG4DetectorConstruction.hh.swp  .CascadesG4PrimaryGeneratorAction.hh.swo  .CascadesG4PrimaryGeneratorAction.hh.swp  ActionInitialization.hh  CaloHit.hh  CascadesG4ActionInitialization.hh  CascadesG4DetectorConstruction.hh  CascadesG4DetectorSD.hh  CascadesG4PrimaryGeneratorAction.hh  Constants.hh  DetectorConstruction.hh  DetectorSD.hh  Ex2G4ActionInitialization.hh  Ex2G4DetectorConstruction.hh  Ex2G4DetectorSD.hh  Ex2G4PrimaryGeneratorAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  get_time.hh
logs/: HEAD
logs/refs/heads/: master  wsl_branch  wsl_branch2  wsl_branch_stripes
logs/refs/remotes/origin/: HEAD  master  win_branch  wsl_branch  wsl_branch2  wsl_branch_stripes
macros/: GPSgun.g4mac  X_bias.mac  Z_bias.mac  beam_1000.mac  center_angle.mac  center_angles.mac  loop.mac  loop_Xline.mac  loop_Zline.mac  run2.mac  run3.mac  set1.mac  start_setup.mac  vis.mac
src/: .CascadesG4ActionInitialization.cc.swo  .CascadesG4ActionInitialization.cc.swp  .CascadesG4DetectorConstruction.cc.swp  .CascadesG4DetectorSD.cc.swp  .CascadesG4DetectorSD.swp  .DetectorSD.swp  .goof.txt.swl  .goof.txt.swm  .goof.txt.swn  .goof.txt.swo  .goof.txt.swp  ActionInitialization.cc  CaloHit.cc  CascadesG4ActionInitialization.cc  CascadesG4DetectorConstruction.cc  CascadesG4DetectorSD.cc  CascadesG4PrimaryGeneratorAction.cc  DetectorConstruction.cc  DetectorSD.cc  Ex2G4ActionInitialization.cc  Ex2G4DetectorConstruction.cc  Ex2G4DetectorSD.cc  Ex2G4PrimaryGeneratorAction.cc  PrimaryGeneratorAction.cc  get_time.cc
